--- a/css/styles.css
+++ b/css/styles.css
@@ -1,127 +1,194 @@
 * {
-    margin: 10px;
-    padding: 0px;
+  margin: 0px;
+  padding: 0px;
 }
 
 img {
-    max-width: 100%;
-    
+  max-width: 96%;
+  height: auto;
 }
 
-html { background-color: rgb(236, 161, 21);
-color: blue;
-font-family: Verdana;
-font-size:x-large;
+html {
+  background-color: rgb(15, 15, 14);
+  color: rgb(230, 230, 241);
+  font-family: Verdana;
+  font-size: 16px;
+  max-width: 100%;
+  height: auto;
+  text-align: center;
+}
+
+h1 {
+  color: white;
+}
+
+a {
+  color: rgb(245, 214, 214);
+}
+
+a:active {
+  color: red;
+}
+
+iframe {
+  max-width: 100%;
+  height: auto;
+}
+
+#grid {
+  display: grid;
+  grid-template-areas: "menu" "header" "main-1" "section-1" "section-2" "footer";
+  grid-template-rows: auto;
+  grid-template-columns: auto;
+  column-gap: 10px;
+  row-gap: 10px;
 }
 
 header {
-    width: 100%;
-    margin-bottom: 50px;
-   align-items: center;
+  grid-area: header;
 }
-h1 { text-align: center;
- color: black;}
-h2 {text-align: center;
-text-decoration: underline;
+
+nav {
+  grid-area: menu;
+}
+
+.main-1 {
+  grid-area: main-1;
+}
+
+.section-1 {
+  grid-area: section-1;
+}
+
+.section-2 {
+  grid-area: section-2;
 }
 
 footer {
-    position: sticky;
-    bottom: 0%;
-    background-color: rgb(236, 161, 21);
-    z-index: 1;
-   text-align: center;
-   font-size: small;
-   width:100%
+  grid-area: footer;
 }
-/*comienzo de maquetado*/
-#grid { 
-    display: grid;
-    grid-template-areas: 
-     "menu header"
-     "menu main-1"
-     "menu section-1"
-     "menu section-2"
-     "footer footer";
-     grid-template-rows: auto;
-     grid-template-columns: 20% auto ;
-     justify-items: left;
-}
-#header {
-    grid-area: header;
-}
-nav {
-    grid-area: menu;
-}
-#main-1{
-    grid-area: main-1;
-}
-#section-1 {
-    grid-area: section-1;
-}
-#section-2{
-    grid-area: section-2;
-}
-footer{
-    grid-area: footer;
-}
-/*responsive*/
-@media (max-width: 480px)
-{
-    html { background-color: rgb(15, 15, 14);
-        color: rgb(230, 230, 241);
-        font-family: Verdana;
-        font-size: 16px;
-        max-width: 100%;
-        height: auto;
-        }
-h1{ color: white;}
-li { padding-bottom: 2px;}
-    a {
-        color: rgb(245, 214, 214);
-    }
-    a:active{
-        color: red;
-    }
 
-    footer {
-        background-color: rgb(15, 15, 14);
-    }
-    #grid { 
-        display: grid;
-        grid-template-areas: 
-         "menu"
-         "header"
-          "main-1"
-         "section-1"
-         "section-2"
-         "footer";
-         grid-template-rows: auto;
-         grid-template-columns: auto ;
-         justify-items: left;
-    }
+.card {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 420px;
+  border: 1px solid lightgray;
+  box-shadow: 2px 2px 8px 4px white;
+  border-radius: 15px;
+  margin: 20px;
 }
-@media (min-width: 481px) and (max-width: 992px) {
-    html { background-color: rgb(9, 47, 150);
-        color: rgb(230, 230, 241);
-        font-family: Verdana;
-        font-size: 100%;
-        text-align: left;
-        }
-    a {
-        color: rgb(245, 214, 214);
-    }
-    a:active{
-        color: rgb(8, 8, 8);
-    }
-    h1{color: white;}
-    footer {
-        background-color: rgb(9, 47, 150);
-    }
-    * {
-        margin: 1px;
-        padding: 0px;
-    }
-    li { padding-bottom: 5px;
-    margin-block: 20px;}
+
+.menu {
+  width: 70%;
 }
+
+header {
+  width: 96%;
+  margin: 0 auto;
+  align-items: center;
+}
+
+h1 {
+  text-align: center;
+  color: black;
+}
+
+h2 {
+  text-align: center;
+  text-decoration: underline;
+}
+
+#logo-inicio {
+  width: 100%;
+  height: auto;
+}
+
+.menu {
+  max-width: 100%;
+}
+.menu ul {
+  padding-bottom: 20px;
+  list-style: none;
+}
+.menu ul :hover {
+  background-color: rgb(179, 171, 171);
+  color: black;
+}
+.menu ul li {
+  margin: 30px;
+  text-align: center;
+  border-color: rgb(131, 65, 65);
+  border-width: 1px;
+  border-style: solid;
+}
+
+a {
+  text-decoration: none;
+}
+
+.main-1 {
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+.main-1 h2 {
+  margin-bottom: 20px;
+}
+
+.img-flex {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin: 20px;
+}
+.img-flex img {
+  width: 50%;
+}
+
+footer {
+  position: sticky;
+  bottom: 0%;
+  background-color: rgb(15, 15, 14);
+  z-index: 1;
+  text-align: center;
+  font-size: small;
+  width: 100%;
+}
+
+form {
+  text-align: left;
+}
+form label {
+  border-width: 2px;
+  border-style: solid;
+  border-color: rgb(131, 65, 65);
+}
+form input, form textarea {
+  border-width: 2px;
+  border-style: solid;
+  border-color: rgb(131, 65, 65);
+  background-color: rgb(15, 15, 14);
+  text-align: center;
+  color: white;
+}
+
+@media (min-width: 768px) {
+  html {
+    font-size: 20px;
+    margin: 10px;
+  }
+  html .menu {
+    width: 100%;
+  }
+  iframe {
+    height: 500px;
+  }
+}
+@media (min-width: 1024px) {
+  .main-1 {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+/*# sourceMappingURL=styles.css.map */
