--- a/scss/partials/_contactanos.scss
+++ b/scss/partials/_contactanos.scss
@@ -1,10 +1,9 @@
+h3{
+    text-decoration: underline
+}
 form{
-    text-align: left;
-    label{
-    border-width: 2px;
-    border-style: solid;
-    border-color: rgb(131, 65, 65);
-    }
+        text-align: center;
+        padding: 10px;
     input, textarea{
         border-width: 2px;
         border-style: solid;
@@ -12,5 +11,26 @@ form{
         background-color: rgb(15, 15, 14);
         text-align: center;
         color: white;
+        width: 60%;
+        margin-bottom: 20px;
+        padding: 7px;
+        &::placeholder {
+            color: rgb(240, 233, 233);
+            font-size: 16px;
+          }
+        }
+    textarea {
+        min-height: 100px;
+        max-height: 200px;
+        max-width: 100%;
+        }
+    .boton{
+        background-color: rgb(131, 65, 65);
+        box-shadow: 4px 4px white;
+        &:hover{
+            cursor: pointer;
+        }
     }
 }
+
+
