--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -4,4 +4,4 @@
 @import "./partials/footer";
 @import "./partials/contactanos";
 @import "./partials/responsive";
-
+@import "./partials/animaciones.scss";
