--- a/scss/partials/_header.scss
+++ b/scss/partials/_header.scss
@@ -19,16 +19,14 @@ text-decoration: underline;
     ul{
         padding-bottom: 20px;
         list-style: none;
-        :hover{
-            background-color: rgb(179, 171, 171);
-            color: black;
-        }
         li{
             margin: 30px;
             text-align: center;
             border-color: rgb(131, 65, 65);
             border-width: 1px;
             border-style: solid;
+            box-shadow: 2px 2px white;
+            text-transform: uppercase;
         }
     }
 }
