--- a/scss/partials/_index.scss
+++ b/scss/partials/_index.scss
@@ -1,4 +1,11 @@
-
+body{ background-color: rgb(15, 15, 14);
+    color: rgb(230, 230, 241);
+    font-family: Verdana;
+    font-size: 16px;
+    max-width: 100%;
+    height: auto;
+    text-align: center;
+    }
 .main-1{
     margin-top: 20px;
     margin-bottom: 20px;
@@ -14,6 +21,13 @@
         margin: 20px;
         img{
             width: 50%;
+            border-radius: 25%;
 
         }
     }
+
+.carousel-item {
+    width: 100%;
+    height: 500px;
+    max-height: 100%;
+  }
