--- a/scss/partials/_responsive.scss
+++ b/scss/partials/_responsive.scss
@@ -2,9 +2,15 @@
   html{
     font-size: 20px;
     margin: 10px;
+    header img{
+      max-height: 500px;
+    }
     .menu{
       width: 100%;
-}
+        }
+    .card {
+      max-width:550px;
+    }
 }
 
 iframe{
